# decide

./: .gitignore  README.md  main.py  pyproject.toml
decide/: agent.py  app.py  config.py  model.py  storage.py  validation.py
evals/: model_agent_eval.py
scripts/: check.sh
tests/: test_bayesian.py  test_model.py
