[project]
name = "decide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "gnuplotlib>=0.42",
    "logfire>=4.3.6",
    "ollama>=0.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.8.1",
    "pydantic-ai-slim[duckduckgo]>=0.8.1",
    "pydantic-evals[logfire]>=0.8.1",
    "scikit-learn>=1.7.2",
    "sqlfluff>=3.4.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
src = ["decide", "main.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "I", "ISC", "UP031", "UP032"]
ignore = ["E501"] # line too long

[tool.ruff.lint.isort]
known-first-party = ["decide"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "numeric",
    "ml",
    "first-party",
    "tests",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"numeric" = ["numpy", "pandas", "scipy"]
"ml" = ["sklearn", "skopt", "statsmodels"]
"tests" = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "statsmodels.*",
]
ignore_missing_imports = true
